frontend/k8s/frontend-kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: fullstack-n4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: dylanpion/react-image
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: fullstack-n4
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: NodePort
