frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: fullstack-n4
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: NodePort
